Revspec test (#68)
Revspec tests