@@ -42,7 +42,14 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.0.0-M4</version>
+
                 <configuration>
+                    <forkedProcessExitTimeoutInSeconds>120</forkedProcessExitTimeoutInSeconds>
+                    <forkCount>3</forkCount>
+                    <reuseForks>true</reuseForks>
+                    <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
+                    <argLine>-Dfile.encoding=UTF-8</argLine>
+                    <useSystemClassLoader>false</useSystemClassLoader>
                     <excludes>
 <!--                        <exclude>**/AnnotatedCommitTest.java</exclude>-->
 <!--                        <exclude>**/BasicOperationsTest.java</exclude>-->
@@ -66,6 +73,9 @@
 <!--                        <exclude>**/RevparseTest.java</exclude>-->
 <!--                        <exclude>**/TagTest.java</exclude>-->
 <!--                        <exclude>**/TreeTest.java</exclude>-->
+<!--                        <exclude>**/CredTest.java</exclude>-->
+<!--                        <exclude>**/RefspecTest.java</exclude>-->
+<!--                        <exclude>**/RevwalkTest.java</exclude>-->
                     </excludes>
                 </configuration>
             </plugin>
